Fix header flex vertical alignment

--- a/css/colormag.less
+++ b/css/colormag.less
@@ -312,11 +312,14 @@ body.bordered-widgets div.vr {
 .flex.evenly {
     justify-content: space-evenly;
 }
-.flex.justifyend {
-    justify-content: end;
+.flex.justifystart {
+    justify-content: start;
 }
 .flex.justifycenter {
     justify-content: center;
+}
+.flex.justifyend {
+    justify-content: end;
 }
 
 .flex.stretch {
