--- a/css/src/colormag.less
+++ b/css/src/colormag.less
@@ -279,11 +279,14 @@ body.bordered-widgets div.vr {
 .flex.evenly {
     justify-content: space-evenly;
 }
-.flex.justifyend {
-    justify-content: end;
+.flex.justifystart {
+    justify-content: start;
 }
 .flex.justifycenter {
     justify-content: center;
+}
+.flex.justifyend {
+    justify-content: end;
 }
 
 .flex.stretch {
